Adjust the configuration to run on Linux

--- a/.spacemacs.env
+++ b/.spacemacs.env
@@ -24,38 +24,67 @@
 
 # Environment variables:
 # ----------------------
-AUTOJUMP_ERROR_PATH=/Users/karol/Library/autojump/errors.log
-AUTOJUMP_SOURCED=1
-Apple_PubSub_Socket_Render=/private/tmp/com.apple.launchd.EhAWKTfhzU/Render
-DISPLAY=FieryCod-2.local
-GEM_HOME=/Users/karol/.rvm/gems/ruby-2.5.3
-GEM_PATH=/Users/karol/.rvm/gems/ruby-2.5.3:/Users/karol/.rvm/gems/ruby-2.5.3@global
-HOME=/Users/karol
-IRBRC=/Users/karol/.rvm/rubies/ruby-2.5.3/.irbrc
-LANG=en_PL.UTF-8
-LOGNAME=karol
-MY_RUBY_HOME=/Users/karol/.rvm/rubies/ruby-2.5.3
-RUST_SRC_PATH=/Users/karol/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/src/rust/src
-NVM_BIN=/Users/karol/.nvm/versions/node/v9.0.0/bin
-NVM_CD_FLAGS=
-NVM_DIR=/Users/karol/.nvm
-PATH=/Users/karol/.rvm/gems/ruby-2.5.3/bin:/Users/karol/.rvm/gems/ruby-2.5.3@global/bin:/Users/karol/.rvm/rubies/ruby-2.5.3/bin:/Users/karol/.nvm/versions/node/v9.0.0/bin:/Users/karol/.cargo/bin:/usr/local/opt/php/bin:/Users/karol/Library/Python/3.7/bin:/bin:/Users/karol/.local/bin:/Users/karol/bin:/usr/local/bin:/Users/karol/.yarn/bin:/Users/karol/.cask/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.yarn/bin:$HOME/.cask/bin:/usr/local/bin:$HOME/.cargo/bin:/Users/karol/.rvm/bin:./node_modules/.bin:/usr/local/opt/fzf/bin
-PWD=/Users/karol/Workspace/rust/hello_world/src
-RUBY_VERSION=ruby-2.5.3
+AWS_DEFAULT_REGION=eu-central-1
+BROWSER=/usr/bin/chromium
+CLOJURE_HOME=/usr/share/clojure
+DESKTOP_SESSION=gnome
+DISPLAY=:0
+EDITOR=/usr/bin/nano
+GDMSESSION=gnome
+GIO_LAUNCHED_DESKTOP_FILE=/usr/share/applications/emacs.desktop
+GIO_LAUNCHED_DESKTOP_FILE_PID=12650
+GJS_DEBUG_OUTPUT=stderr
+GJS_DEBUG_TOPICS=JS ERROR;JS LOG
+GRADLE_HOME=/home/fierycod/.sdkman/candidates/gradle/current
+GROOVY_HOME=/home/fierycod/.sdkman/candidates/groovy/current
+HG=/usr/bin/hg
+HOME=/home/fierycod
+JBAKE_HOME=/home/fierycod/.sdkman/candidates/jbake/current
+graalvm=home/fierycod/.graalvm/bin
+LANG=en_AU.UTF-8
+LC_COLLATE=en_AU.UTF-8
+LC_CTYPE=en_AU.UTF-8
+LESS=-R
+LOGNAME=fierycod
+LSCOLORS=Gxfxcxdxbxegedabagacad
+LS_COLORS=
+MAIL=/var/spool/mail/fierycod
+MAVEN_OPTS=-Xmx512m
+MOZ_PLUGIN_PATH=/usr/lib/mozilla/plugins
+NVM_BIN=/home/fierycod/.nvm/versions/node/v8.9.1/bin
+NVM_CD_FLAGS=-q
+NVM_DIR=/home/fierycod/.nvm
+PAGER=less
+PATH=/home/fierycod/.nvm/versions/node/v8.9.1/bin:/home/fierycod/.local/bin:/home/fierycod/bin:/usr/local/bin:/home/fierycod/.yarn/bin:/usr/bin:/bin:/usr/local/sbin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:./node_modules/.bin:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/lib:/home/fierycod/.antigen/bundles/mafredri/zsh-async:/home/fierycod/.antigen/bundles/sindresorhus/pure:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/git:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/heroku:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/docker:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/docker-compose:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/docker-machine:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/yarn:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/mvn:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/minikube:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/nvm:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/npm:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/fzf:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/pip:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/lein:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/command-not-found:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/var/lib/snapd/snap/bin:/home/fierycod/go/bin
+PATH=/home/fierycod/.sdkman/candidates/jbake/current/bin:/home/fierycod/.sdkman/candidates/groovy/current/bin:/home/fierycod/.sdkman/candidates/gradle/current/bin:/home/fierycod/.nvm/versions/node/v8.12.0/bin:/home/fierycod/.local/bin:/home/fierycod/bin:/usr/local/bin:/home/fierycod/.yarn/bin:/usr/bin:/bin:/usr/local/sbin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:./node_modules/.bin:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/lib:/home/fierycod/.antigen/bundles/mafredri/zsh-async:/home/fierycod/.antigen/bundles/sindresorhus/pure:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/git:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/heroku:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/docker:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/docker-compose:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/docker-machine:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/yarn:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/mvn:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/minikube:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/nvm:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/npm:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/fzf:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/pip:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/lein:/home/fierycod/.antigen/bundles/robbyrussell/oh-my-zsh/plugins/command-not-found
+PROMPT_EOL_MARK=
+QT_AUTO_SCREEN_SCALE_FACTOR=0
+QT_QPA_PLATFORMTHEME=qt5ct
+QT_SELECT=qt5
+QT_STYLE_OVERRIDE=gtk
+SDKMAN_CANDIDATES_API=https://api.sdkman.io/2
+SDKMAN_CANDIDATES_DIR=/home/fierycod/.sdkman/candidates
+SDKMAN_DIR=/home/fierycod/.sdkman
+SDKMAN_PLATFORM=Linux64
+SDKMAN_VERSION=5.7.3+337
+SESSION_MANAGER=local/fierycod:@/tmp/.ICE-unix/1163,unix/fierycod:/tmp/.ICE-unix/1163
 SHELL=/bin/zsh
-SHLVL=4
+SHLVL=0
 TERM=dumb
-TMPDIR=/var/folders/4p/9x6szy1s3mn7y_n68j8ndnq80000gn/T/
-USER=karol
-XPC_FLAGS=0x0
-XPC_SERVICE_NAME=0
+USER=fierycod
+XAUTHORITY=/home/fierycod/.Xauthority
+XDG_CURRENT_DESKTOP=GNOME
+XDG_DATA_DIRS=/home/fierycod/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share
+XDG_DATA_DIRS=/home/fierycod/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share:/var/lib/snapd/desktop
+XDG_GREETER_DATA_DIR=/var/lib/lightdm-data/fierycod
+XDG_MENU_PREFIX=gnome-
+XDG_RUNTIME_DIR=/run/user/1000
+XDG_SEAT=seat0
+XDG_SEAT_PATH=/org/freedesktop/DisplayManager/Seat0
+XDG_SESSION_CLASS=user
+XDG_SESSION_DESKTOP=gnome
+XDG_SESSION_ID=2
+XDG_SESSION_PATH=/org/freedesktop/DisplayManager/Session0
+XDG_SESSION_TYPE=x11
+XDG_VTNR=7
 _=/usr/bin/env
-__CF_USER_TEXT_ENCODING=0x1F5:0x0:0x0
-_system_arch=x86_64
-_system_name=OSX
-_system_type=Darwin
-_system_version=10.14
-rvm_bin_path=/Users/karol/.rvm/bin
-rvm_path=/Users/karol/.rvm
-rvm_prefix=/Users/karol
-rvm_version=1.29.4 (latest)
